--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,9 @@ typings/
 /cdn/images/*.png
 /cdn/images/*.gif
 
+/cdn/images/temp/*.jpg
+/cdn/images/temp/*.png
+/cdn/images/temp/*.gif
+
 # End of https://www.gitignore.io/api/node,macos
 
