--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^5.3.1",
     "file-type": "^10.10.0",
     "handlebars-helpers": "^0.10.0",
+    "image-size": "^0.7.4",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongo-sanitize": "^1.0.1",
