Initial link preview setup

--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "file-type": "^10.10.0",
+    "got": "^9.6.0",
     "handlebars-helpers": "^0.10.0",
+    "metascraper": "^5.4.0",
+    "metascraper-description": "^5.4.0",
+    "metascraper-image": "^5.4.0",
+    "metascraper-title": "^5.4.0",
+    "metascraper-url": "^5.4.0",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongo-sanitize": "^1.0.1",
