--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,5 @@ typings/
 /cdn/images/temp/*.png
 /cdn/images/temp/*.gif
 
-# End of https://www.gitignore.io/api/node,macos
-
-postTimeline.csv
-userTimeline.csv
+postTimeline.*
+userTimeline.*
