ok everything's *slightly* less fucked

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Create 'boostsV2' field",
-            "program": "${workspaceFolder}\\databasetransforms\\populateBoostsProperly.js"
+            "program": "${workspaceFolder}\\databasetransforms\\populateBoostsV2.js"
         },
         {
             "type": "node",
