--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,6 +44,12 @@
             "request": "launch",
             "name": "Add width and height to images",
             "program": "${workspaceFolder}\\databasetransforms\\addImageSizesToDB.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Remove old image fields",
+            "program": "${workspaceFolder}\\databasetransforms\\removeOldPostFields.js"
         }
     ]
 }
