--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -50,6 +50,12 @@
             "request": "launch",
             "name": "Remove old image fields",
             "program": "${workspaceFolder}\\databasetransforms\\removeOldPostFields.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Nuke posts",
+            "program": "${workspaceFolder}\\databasetransforms\\DO_NOT_RUNnewTestPosts.js"
         }
     ]
 }
