not completely sure what i'm doing, maybe fix that?

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,12 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "Launch Server",
+            "program": "${workspaceFolder}\\server.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Create 'boostsV2' field",
             "program": "${workspaceFolder}\\databasetransforms\\populateBoostsV2.js"
         },
@@ -19,13 +25,6 @@
             "restart": true,
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
-        },
-
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Server",
-            "program": "${workspaceFolder}\\server.js"
         },
         {
             "type": "node",
@@ -44,6 +43,18 @@
             "request": "launch",
             "name": "Add width and height to images",
             "program": "${workspaceFolder}\\databasetransforms\\addImageSizesToDB.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Remove old image fields",
+            "program": "${workspaceFolder}\\databasetransforms\\removeOldPostFields.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Nuke posts",
+            "program": "${workspaceFolder}\\databasetransforms\\DO_NOT_RUNnewTestPosts.js"
         }
     ]
 }
