--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,6 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Create 'boostsV2' field",
-            "program": "${workspaceFolder}\\databasetransforms\\populateBoostsProperly.js"
-        },
-        {
-            "type": "node",
-            "request": "launch",
             "name": "nodemon Launch Server",
             "runtimeExecutable": "nodemon",
             "program": "${workspaceFolder}/server.js",
@@ -20,6 +14,19 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
         },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Add Joined Date And Timestamps",
+            "program": "${workspaceFolder}\\databasetransforms\\addJoinedDateAndTimestamps.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Create 'boostsV2' field",
+            "program": "${workspaceFolder}\\databasetransforms\\populateBoostsProperly.js"
+        },
+        
 
         {
             "type": "node",
