--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "node-schedule": "^1.3.2",
+    "nodemailer": "^6.2.1",
+    "nodemailer-express-handlebars": "^3.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
