--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -67,6 +67,12 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "Add isVertical field for images",
+            "program": "${workspaceFolder}\\databasetransforms\\addIsVerticalField.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Remove old image fields",
             "program": "${workspaceFolder}\\databasetransforms\\removeOldPostFields.js"
         },
