--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "metascraper-url": "^5.4.0",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "mongo-sanitize": "^1.0.1",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
