--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "request": "^2.88.0",
     "sanitize-html": "^1.20.0",
     "sharp": "^0.22.0",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "web-push": "^3.3.5"
   }
 }
