add compression module

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autolinker": "^3.0.5",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
