--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,3 +1,4 @@
 {
-	"brace_style": "collapse,preserve-inline"
+	"brace_style": "collapse,preserve-inline",
+	"css":{"selector_separator_newline":false,"preserve_newlines":false}
 }
