--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^5.3.1",
     "got": "^9.6.0",
     "handlebars-helpers": "^0.10.0",
+    "http-server": "^0.11.1",
     "metascraper": "^5.4.0",
     "metascraper-description": "^5.4.0",
     "metascraper-image": "^5.4.0",
