--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lightweight, trust- and community-based social network",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js & node-sass --output-style compressed scss/index.scss public/css/style.css --watch"
   },
   "author": "Raphael Kabo",
   "license": "GPL-3.0-only",
@@ -46,5 +46,9 @@
     "sharp": "^0.22.0",
     "shortid": "^2.2.14",
     "web-push": "^3.3.5"
+  },
+  "devDependencies": {
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1"
   }
 }
