--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-fileupload": "^1.1.3-alpha.1",
     "express-handlebars": "^3.0.2",
     "express-messages": "^1.0.1",
+    "express-mongo-sanitize": "^1.3.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "got": "^9.6.0",
@@ -36,7 +37,6 @@
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
-    "mongo-sanitize": "^1.0.1",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "node-schedule": "^1.3.2",
