--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch-sass": "node-sass --source-map true --output-style compressed scss/index.scss public/css/style.css --watch",
     "generate-dark-mode": "node-sass --source-map true --output-style compressed scss/dark-mode.scss public/css/dark-mode.css --watch",
     "start": "nodemon server.js & npm run watch-sass",
-    "debug": "set NODE_ENV=development&&nodemon --inspect --inspect-brk=5757 server.js&&node-sass --source-comments --output-style compressed scss/index.scss public/css/style.css --watch"
+    "debug": "NODE_ENV=development & nodemon --inspect --inspect-brk=5757 server.js & node-sass --source-comments --output-style compressed scss/index.scss public/css/style.css --watch",
+    "debugNonUnix": "set NODE_ENV=development&&nodemon --inspect --inspect-brk=5757 server.js&&node-sass --source-comments --output-style compressed scss/index.scss public/css/style.css --watch"
   },
   "author": "Raphael Kabo",
   "license": "GPL-3.0-only",
