--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch-sass": "node-sass --source-map true --output-style compressed scss/index.scss public/css/style.css --watch",
     "generate-dark-mode": "node-sass --source-map true --output-style compressed scss/dark-mode.scss public/css/dark-mode.css --watch",
     "start": "nodemon server.js & npm run watch-sass",
-    "debug": "nodemon --inspect --inspect-brk=5757 server.js & node-sass --source-comments --output-style compressed scss/index.scss public/css/style.css --watch"
+    "debug": "nodemon --inspect --inspect-brk=5757 server.js & node-sass --source-comments --output-style compressed scss/index.scss public/css/style.css --watch",
+    "lint": "eslint app --fix"
   },
   "author": "Raphael Kabo",
   "license": "GPL-3.0-only",
@@ -51,6 +52,12 @@
     "web-push": "^3.3.5"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1"
   }
