--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "shortid": "^2.2.14",
     "web-push": "^3.3.5"
   },
+  "resolutions": {
+	  "handlebars": "v4.5.3"
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
