--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "sanitize-html": "^1.20.0",
     "sharp": "^0.23.0",
     "shortid": "^2.2.14",
-    "web-push": "^3.3.5"
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
+    "web-push": "^3.3.5",
+    "webpack": "^4.41.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
