--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sanitize-html": "^1.20.0",
     "sharp": "^0.23.0",
     "shortid": "^2.2.14",
+    "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
     "web-push": "^3.3.5",
@@ -64,5 +65,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1"
+  },
+  "vue": {
+    "runtimeCompiler": true
   }
 }
