--- a/package.json
+++ b/package.json
@@ -8,10 +8,29 @@
     "generate-dark-mode": "node-sass --source-map true --output-style compressed scss/dark-mode.scss public/css/dark-mode.css --watch",
     "start": "nodemon server.js & npm run watch-sass",
     "debug": "nodemon --inspect --inspect-brk=5757 server.js & node-sass --source-comments --output-style compressed scss/index.scss public/css/style.css --watch",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "test": "jest"
   },
   "author": "Raphael Kabo",
   "license": "GPL-3.0-only",
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": ["**/vue/**"],
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)?$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    },
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ]
+  },
+  "babel": {
+    "presets": ["@babel/preset-env"]
+  },
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.1",
     "@sendgrid/mail": "^6.3.1",
@@ -51,22 +70,26 @@
     "sharp": "^0.23.0",
     "shortid": "^2.2.14",
     "vue": "^2.6.11",
-    "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
     "web-push": "^3.3.5",
     "webpack": "^4.41.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.8.4",
+    "@vue/test-utils": "^1.0.0-beta.31",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^25.1.0",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^25.1.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1"
-  },
-  "vue": {
-    "runtimeCompiler": true
+    "nodemon": "^1.19.1",
+    "vue-jest": "^3.0.5",
+    "vue-loader": "^15.9.0"
   }
 }
