--- a/package.json
+++ b/package.json
@@ -30,11 +30,19 @@
     },
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/"
-    ]
+    ],
+    "testURL": "http://localhost/"
   },
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
     ]
   },
   "dependencies": {
@@ -56,6 +64,7 @@
     "express-validator": "^5.3.1",
     "got": "^9.6.0",
     "handlebars-helpers": "^0.10.0",
+    "jquery": "^3.4.1",
     "metascraper": "^5.4.0",
     "metascraper-description": "^5.4.0",
     "metascraper-image": "^5.4.0",
