--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@babel/preset-env": "^7.8.4",
     "@vue/cli-plugin-unit-jest": "^4.2.2",
     "@vue/cli-service": "^4.2.2",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.0-beta.31",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^25.1.0",
@@ -102,11 +103,14 @@
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.1",
     "jest": "^25.1.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
+    "prettier": "^1.19.1",
     "vue-jest": "4.0.0-beta.2",
     "vue-loader": "^15.9.0"
   }
