--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@handlebars/allow-prototype-access": "^1.0.1",
     "@sendgrid/mail": "^6.3.1",
     "autolinker": "^3.0.5",
+    "aws-sdk": "^2.641.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
@@ -41,6 +42,7 @@
     "moment-timezone": "^0.5.25",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
+    "nanoid": "^2.1.11",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.2.1",
     "nodemailer-express-handlebars": "^3.0.0",
@@ -49,7 +51,6 @@
     "request": "^2.88.0",
     "sanitize-html": "^1.20.0",
     "sharp": "^0.23.0",
-    "shortid": "^2.2.14",
     "web-push": "^3.3.5"
   },
   "devDependencies": {
@@ -61,5 +62,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1"
+  },
+  "resolutions": {
+    "graceful-fs": "4.2.3"
   }
 }
