--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
+    "expo-server-sdk": "^3.5.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.3-alpha.1",
     "express-handlebars": "^3.0.2",
