--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@sendgrid/mail": "^6.3.1",
     "autolinker": "^3.0.5",
     "aws-sdk": "^2.641.0",
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
