--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.1",
     "@sendgrid/mail": "^6.3.1",
+    "app-root-path": "^3.0.0",
     "autolinker": "^3.0.5",
     "aws-sdk": "^2.641.0",
     "bcryptjs": "^2.4.3",
