feat(docker): wrote dev and prod Dockerfiles
```sh
$ docker build \
    -t sweet:dev \
    -f docker/Dockerfile.dev \
    .
$ docker run \
    --rm \
    -it \
    sweet:dev
```

still to do:
* write docker-compose files to provide mongodb
* get mongo connection params from environment
* automatically populate sweetbot user?
* untangle dependencies and devDependencies (prod Dockerfile is broken)

--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "watch-sass": "node-sass --source-map true --output-style compressed scss/index.scss public/css/style.css --watch",
     "generate-dark-mode": "node-sass --source-map true --output-style compressed scss/dark-mode.scss public/css/dark-mode.css --watch",
     "start": "nodemon server.js & npm run watch-sass",
+    "start:prod": "node ./server.js",
     "debug": "nodemon --inspect --inspect-brk=5757 server.js & node-sass --source-comments --output-style compressed scss/index.scss public/css/style.css --watch",
     "lint": "eslint --fix",
     "test": "vue-cli-service test:unit"
   },
   "author": "Raphael Kabo",
   "license": "GPL-3.0-only",
+  "repository": {
+    "type": "github",
+    "url": "lowercasename/sweet"
+  },
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
