feat(docker): added docker-compose config
also some rework of configuration to use env vars rather than entire
files.  still need to fix some references to `config/auth.js`.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 
 ### Custom for sweet ###
 
-# Configuration files with MongoDB login and API keys
-config/database.js
-config/auth.js
+# Configuration files
+.env
+
 .sass-cache
 
 ### macOS ###
