--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "generate-dark-mode": "node-sass --source-map true --output-style compressed scss/dark-mode.scss public/css/dark-mode.css --watch",
     "start": "nodemon server.js & npm run watch-sass",
     "start:prod": "node ./server.js",
+    "docker:start": "./scripts/docker/start.sh",
+    "docker:stop": "./scripts/docker/stop.sh",
     "debug": "nodemon --inspect --inspect-brk=5757 server.js & node-sass --source-comments --output-style compressed scss/index.scss public/css/style.css --watch",
     "lint": "eslint --fix",
     "test": "vue-cli-service test:unit"
@@ -58,9 +60,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
+    "config": "^3.3.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "expo-server-sdk": "^3.5.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.9",
