--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "app-root-path": "^3.0.0",
     "autolinker": "^3.0.5",
     "aws-sdk": "^2.641.0",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
+    "emoji-mart-vue": "^2.6.6",
     "expo-server-sdk": "^3.5.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.9",
@@ -64,6 +66,7 @@
     "express-mongo-sanitize": "^1.3.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
+    "fuse.js": "^6.4.1",
     "got": "^9.6.0",
     "handlebars-helpers": "^0.10.0",
     "jquery": "^3.4.1",
@@ -85,8 +88,11 @@
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "sanitize-html": "^1.20.0",
-    "sharp": "^0.23.0",
+    "sharp": "^0.25.4",
     "shortid": "^2.2.14",
+    "tippy.js": "^6.2.6",
+    "tiptap": "^1.29.6",
+    "tiptap-extensions": "^1.32.5",
     "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.11",
     "web-push": "^3.3.5",
