--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "nodemailer-express-handlebars": "^3.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "prosemirror-model": "^1.11.0",
     "request": "^2.88.0",
     "sanitize-html": "^1.20.0",
     "sharp": "^0.25.4",
@@ -94,6 +95,7 @@
     "tiptap": "^1.29.6",
     "tiptap-extensions": "^1.32.5",
     "vue": "^2.6.11",
+    "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.11",
     "web-push": "^3.3.5",
     "webpack": "^4.41.5"
@@ -107,6 +109,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^4.2.2",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.0",
@@ -116,6 +119,7 @@
     "jest": "^25.1.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
+    "style-loader": "^1.2.1",
     "vue-jest": "4.0.0-beta.2",
     "vue-loader": "^15.9.0"
   }
