--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "bootbox": "^5.4.0",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "emoji-mart-vue": "^2.6.6",
+    "emoji-mart-vue-fast": "^7.0.4",
     "expo-server-sdk": "^3.5.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.9",
@@ -91,6 +93,7 @@
     "sanitize-html": "^1.20.0",
     "sharp": "^0.25.4",
     "shortid": "^2.2.14",
+    "sweetalert2": "^9.17.2",
     "tippy.js": "^6.2.6",
     "tiptap": "^1.29.6",
     "tiptap-extensions": "^1.32.5",
