--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "@handlebars/allow-prototype-access": "^1.0.1",
     "app-root-path": "^3.0.0",
     "autolinker": "^3.0.5",
@@ -53,10 +54,9 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "bootbox": "^5.4.0",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^2.0.3",
+    "connect-mongo": "3.2.0",
     "cookie-parser": "^1.4.4",
     "emoji-mart-vue": "^2.6.6",
     "emoji-mart-vue-fast": "^7.0.4",
@@ -71,6 +71,7 @@
     "fuse.js": "^6.4.1",
     "got": "^9.6.0",
     "handlebars-helpers": "^0.10.0",
+    "hooper": "^0.3.4",
     "jquery": "^3.4.1",
     "metascraper": "^5.4.0",
     "metascraper-description": "^5.4.0",
@@ -98,6 +99,8 @@
     "tiptap": "^1.29.6",
     "tiptap-extensions": "^1.32.5",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
+    "vue-lazyload": "^1.3.3",
     "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.11",
     "web-push": "^3.3.5",
@@ -106,7 +109,6 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@vue/cli-plugin-unit-jest": "^4.2.2",
     "@vue/cli-service": "^4.2.2",
     "@vue/test-utils": "^1.0.0-beta.31",
     "babel-core": "7.0.0-bridge.0",
@@ -123,7 +125,7 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "style-loader": "^1.2.1",
-    "vue-jest": "4.0.0-beta.2",
+    "vue-jest": "^4.0.0-rc.0",
     "vue-loader": "^15.9.0"
   }
 }
