--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
+    "mongo-connect": "^0.0.6",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "nanoid": "^2.1.11",
