--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "vue-lazyload": "^1.3.3",
     "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.11",
+    "vue-tippy": "^4.7.2",
     "web-push": "^3.3.5",
     "webpack": "^4.41.5"
   },
